# rlbidder

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: evaluate_agents.py  evaluate_all_agents.py  performance_visualization.ipynb  train_bc.py  train_cql.py  train_dt.py  train_gas.py  train_gave.py  train_iql.py
rlbidder/: __init__.py  constants.py  utils.py
rlbidder/agents/: __init__.py  base.py  bc.py  budget_pacer.py  constant_bid.py  cql.py  dt.py  fixed_cpa.py  gas.py  gave.py  get_baseline_agent_configs.py  iql.py  pid.py  stochastic_cpa.py  value_scaled_cpa.py
rlbidder/data/: __init__.py  data_module.py  io.py  preprocess.py  replay_buffer.py  scalers.py  traj_dataset.py
rlbidder/envs/: __init__.py  sampler.py  simulator.py
rlbidder/evaluation/: __init__.py  history.py  online.py  parallel.py  summarize.py  utils.py
rlbidder/models/: __init__.py  distributions.py  losses.py  networks.py  optim.py  transformers.py  utils.py
rlbidder/viz/: __init__.py  market_metrics.py  plots.py
scripts/: build_dt_dataset.py  build_eval_dataset.py  build_transition_dataset.py  convert_csv_to_parquet.py  download_raw_data.sh  scale_transitions.py
