[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlbidder"
description = "A modern, modular RL library for auto-bidding in online advertising auctions."
authors = [
    {name = "Xingdong Zuo"}
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.6",
    "lightning>=2.4",
    "polars>=1.6",
    "pandas>=2.2",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "joblib>=1.3",
    "tqdm>=4.66",
    "rich>=10.2.2",
    "plotly>=5.18",
    "rliable>=1.0.6",
    "aim>=3.17",
    "draccus>=0.8"
]
keywords = [
    "reinforcement-learning",
    "autobidding",
    "advertising",
    "auctions",
    "pytorch",
    "offline-rl",
    "rl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: PyTorch",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings>=0.25",
    "mkdocstrings-python>=1.10",
    "pymdown-extensions>=10.8",
]
train = [
    "lightning>=2.4",
    "aim>=3.17",
    "wandb>=0.17",
    "hydra-core>=1.3",
    "draccus>=0.8",
]
eval = [
    "plotly>=5.18",
    "rliable>=1.0.6",
    "pandas>=2.2",
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]
all = [
    "rlbidder[train,eval,dev,docs,test]",
]

[project.urls]
Homepage = "https://github.com/zuoxingdong/rlbidder"
Repository = "https://github.com/zuoxingdong/rlbidder"
Issues = "https://github.com/zuoxingdong/rlbidder/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"rlbidder" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rlbidder*"]
exclude = [
    "tests*",
    "examples*",
    "scripts*",
    "assets*",
    "data*",
    "legacy*",
    "lightning_logs*",
    "docs*",
]

[tool.setuptools.dynamic]
version = {attr = "rlbidder.__version__"}

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["rlbidder", "tests"]
extend-exclude = [
    "examples",
    "legacy",
    "lightning_logs",
    "docs",
    "data",
    "assets",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]

[tool.black]
line-length = 120
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "(examples|legacy|lightning_logs|docs|data|assets)"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true
exclude = "(examples|legacy|lightning_logs|docs|data|assets)"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
